2009-12-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* bin/flumotion-admin-text.in:
	* bin/flumotion-admin.in:
	* bin/flumotion-command.in:
	* bin/flumotion-inspect.in:
	* bin/flumotion-job.in:
	* bin/flumotion-launch.in:
	* bin/flumotion-manager.in:
	* bin/flumotion-rrdmon.in:
	* bin/flumotion-tester.in:
	* bin/flumotion-worker.in:
	* bin/flumotion.in:
	Let configure expand the PYTHON macro instead of us hardcoding
	paths in our .in files.

2009-12-08  Jan Urbanski  <jurbanski@flumotion.com>

	* tools/flumotion-completion:
	Remove leftover brace.

2009-12-08  Jan Urbanski  <jurbanski@flumotion.com>

	* tools/flumotion-completion (added):
	Add bash completion functions for flumotion-admin and
	flumotion-command.

2009-12-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/command/main.py:
	Make flumotion-command use values from the default connections file,
	similar to what has been done for flumotion-admin in r8828.

2009-12-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/process.py:
	Add a force flag to deletePidFile that makes it ignore errors due to
	the pid file not being present.

	* flumotion/service/service.py:
	Always remove the pid file of a process when asked to stop it,
	regardless of whether the stopping was successful or not.
	Remove stale pid files when asked to start a process.

2009-12-04  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/file_reader.py:
	* flumotion/component/misc/httpserver/httpcached/http_utils.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/test/test_component_httpserver_httpcached_httputils.py:
	Fixed a constant name clash for default values.
	Fixed the URL quoting.
	Removed the admin warning message when path is specified with a plug.

2009-12-03  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_cache_manager.py:
	Fix fillTestCache. The `i' and `filesize' variables were not evaluated