@@ -1,3 +1,13 @@
+2009-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	reviewed by: Zaheer
+
+	* tests/ComponentsView.py (deleted):
+	  Remove old test that wasn't working anymore.
+	* flumotion/admin/gtk/componentlist.py:
+	  Migrate and update that code into the file straight away to have
+	  a better chance at getting updated.
+
 2009-12-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* bin/flumotion-admin-text.in:
